   channels with a quote in them (Dan Fruehauf).
 - Fixed truncation of the URL in the right-click menu. Now handles
   UTF-8 properly [1188229].
 - Fixed use of CP1255 charset, which would chop the last char when
   receiving messages [1122089].
 - The DCC windows now allow multiple selection and the columns auto
   resize (Dan Fruehauf).
 - Perl: <fill me in>.
 - 
 - 
 - 


----------------------------------------------------------------------
 2.4.3
----------------------------------------------------------------------

 - Updated translations (de, sq, zh_CN).
 - Fixed crash of server list connect button when no network is
   selected while using GTK's auto-find feature [1166669].
 - Fixed handling of WhoIs Special event on some networks where it
   could chop off the first character [1164315].
 - Plugin API changes: Added "nickserv" field to xchat_get_info.
 - Python: Fixed get_list() incorrectly failing when the list
   contained a time field [1171525].
 - Perl: Make scripts using calls with fully qualified subs work again
   [1170139] (Lian Wan Situ).
 - Fixed input-box input-method (GTK I.M.) problem [1168239].
 - Fixed: Ignore and Notify windows incorrectly used the stock CLOSE
   button instead of DELETE [1170655].
 - Placed Close/Connect buttons in correct position in server list
   [1165474].


----------------------------------------------------------------------
 2.4.2
----------------------------------------------------------------------

 - Updated translations (ca, de, lt, nl, ru, sk, sr, vi).
 - Added command line args -u and -p.
 - Fixed handling of "MODE -o+o nick nick" (#1094026).
 - Plugin API changes:
   * Added "Key Press" print event.
   * Added "state_cursor" for xchat_get_prefs.
   * Added xchat_strip and xchat_free functions.
   * Added "lasttalk" field to "users" list.
   * Added "charset" field to xchat_get_info.
 - Perl plugin changes (Lian Wan Situ):
   * Move each script into their own unique package/namespace. Scripts