@@ -228,8 +228,9 @@ void
 tcp_sendf (server *serv, char *fmt, ...)
 {
 	va_list args;
-	/* keep this buffer in BSS */
-	static char send_buf[520];	/* good code hey (no it's not overflowable) */
+	/* keep this buffer in BSS. Converting UTF-8 to ISO-8895-x might make the
+      string shorter, so allow alot more than 512 for now. */
+	static char send_buf[1540];	/* good code hey (no it's not overflowable) */
 	int len;
 
 	va_start (args, fmt);
